 * Fix: Don't show canvas during catchup when using software renderer.
 * Fix: Fix keyboard shortcuts, enter and backspace not reacting on some devices in the browser. Thanks Greendyno for reporting.
 * Fix: Keep leading spaces and zeroes the same when creating or duplicating a layer. Thanks Greendyno for reporting.

2025-02-12 Version 2.2.2-beta.5
 * Feature: Color circle dock with gamut masks, available through View > Docks > Color Circle. Similar to Krita's Artistic Color Selector and MyPaint's HSV/HCY Wheel.
 * Fix: Make temporary tool switches by holding a key down work again. Thanks 3rd_EFNO and bunnie for reporting.
 * Fix: Disregard hidden layers when layer picking in frame view.
 * Feature: Add a search bar to the key frame properties dialog.
 * Fix: Reset locale to "C" after Qt messes it up on startup. Thanks Meru for reporting.
 * Fix: Don't use bilinear interpolation in transforms unnecessarily.
 * Feature: Add canvas shortcuts for changing color hue, saturation/chroma and value/lightness/luminosity. Thanks Dann DeCairns for suggesting.
 * Feature: Make size adjustment canvas shortcut depend on the speed of the drag. Thanks MorrowShore for suggesting.
 * Fix: Remove pointless permissions on Android that Qt includes by default but aren't actually used.
 * Fix: Don't default Android to fingerpaint when a pen is present.
 * Fix: Work around a crash on Android that sometimes occurs when putting your palm on the screen, which somehow leads to touch events with zero contact points. Thanks Mav for reporting.
 * Fix: Uncap aspect ratio on older Android versions. Thanks Molderche for reporting.
 * Fix: Work around modifier keys not registering when using a tablet on Wayland. Thanks Absolute Goober for reporting.
 * Server Fix: Don't pointlessly reload server certificates if they didn't change. Thanks Liz for reporting.
 * Server Fix: Work around too many authenticated users in a session, which could cause a crash. Thanks Liz for reporting.