@@ -29,6 +29,7 @@ Unreleased Version 2.2.2-pre
  * Fix: Don't show canvas during catchup when using software renderer.
  * Fix: Fix keyboard shortcuts, enter and backspace not reacting on some devices in the browser. Thanks Greendyno for reporting.
  * Fix: Keep leading spaces and zeroes the same when creating or duplicating a layer. Thanks Greendyno for reporting.
+ * Feature: Allow making the application full-screen in the browser, using View > Full Screen. Thanks Windy for suggesting.
 
 2025-02-12 Version 2.2.2-beta.5
  * Feature: Color circle dock with gamut masks, available through View > Docks > Color Circle. Similar to Krita's Artistic Color Selector and MyPaint's HSV/HCY Wheel.
